--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,14 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="/src/assets/bootstrap/css/bootstrap.min.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+
     <title>Maciej Matulewicz Portfolio</title>
   </head>
   <body>
@@ -44,6 +50,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="/src/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
